--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,23 @@ authors = [
   { name = "Meraj Hashemi", email = "meraj.hashemi.esh@gmail.com" },
 ]
 
-dependencies = []
+dependencies = [
+  "pandas>=2.3.0",
+  "numpy>=2.3.0",
+  "matplotlib>=3.10.0",
+  "seaborn>=0.13.0",
+  "scikit-learn>=1.5.0",
+  "statsmodels>=0.14.0",
+  "scipy>=1.16.0",
+  "requests>=2.32.0",
+  "beautifulsoup4>=4.13.0",
+  "python-dotenv>=1.2.0",
+  "yfinance>=0.2.0",
+  "pycoingecko>=3.2.0",
+]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/stocks", "src/crypto"]
+packages = ["src", "src/stocks", "src/crypto"]
 
 
 
